# mosaic_proto

./: .gitignore  README.md  WORKSPACE
bazel_scripts/: mosaic_proto_rules.bzl
protos/common/: BUILD.bazel  types.proto
protos/federate/: BUILD.bazel  federate_message_wrapper.proto  mediator_status.proto  simulation_step.proto
tests/test_java/: BUILD.bazel
tests/test_java/src/main/java/org/eclipse/javatest/: JavaTest.java
tests/test_python/: BUILD.bazel  python_test.py
